# prevcorp_dbt

./: .gitignore  ARCHITECTURE_SECURITY.md  CLAUDE.md  README.md  main.py  pyproject.toml  schema.md
.github/workflows/: ci.yml
generate_dataset/: generate.py
prevcorp_dbt/: dbt_project.yml
prevcorp_dbt/models/marts/: _dim__assures.yml  _dim__beneficiaires.yml  _dim__contrats.yml  _dim__entreprises.yml  _dim__segments.yml  _fct__contrats_entreprises.yml  _fct__cotisations.yml  _fct__dossiers.yml  _fct__paiements.yml  _fct__ressources.yml  _metricflow_time_spine.yml  dim__assures.sql  dim__beneficiaires.sql  dim__contrats.sql  dim__entreprises.sql  dim__segments.sql  dim_beneficiaries.sql  dim_companies.sql  dim_contracts.sql  dim_policyholders.sql  dim_segments.sql  fct__contrats_entreprises.sql  fct__cotisations.sql  fct__dossiers.sql  fct__paiements.sql  fct__ressources.sql  fct_claims.sql  fct_payments.sql  fct_premiums.sql  fct_resources.sql  metricflow_time_spine.sql
prevcorp_dbt/models/staging/: _schema.yml  stg_prevcorp__assures.sql  stg_prevcorp__beneficiaires.sql  stg_prevcorp__beneficiaries.sql  stg_prevcorp__claims.sql  stg_prevcorp__companies.sql  stg_prevcorp__contract_companies.sql  stg_prevcorp__contracts.sql  stg_prevcorp__contrats.sql  (+11 more)
prevcorp_dbt/seeds/: raw_beneficiaries.csv  raw_claims.csv  raw_companies.csv  raw_contract_companies.csv  raw_contracts.csv  raw_policyholders.csv  raw_premiums.csv  raw_resources.csv  raw_segments.csv  schema.yml
seeds/: raw_beneficiaries.csv  raw_claims.csv  raw_policyholders.csv  raw_premiums.csv
